[gd_scene load_steps=3 format=3 uid="uid://d3k8f5h7l9m1n"]

[ext_resource type="StyleBox" uid="uid://cwmijfvtxcg4s" path="res://themes/card.tres" id="1_card_theme"]
[ext_resource type="Script" path="res://src/ui_new/components/CatchStatsWindow.gd" id="2_script"]

[node name="CatchStatsWindow" type="AcceptDialog"]
title = "Historial de Capturas"
initial_position = 1
size = Vector2i(500, 600)
unresizable = true
script = ExtResource("2_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="HeaderPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_card_theme")

[node name="HeaderMargin" type="MarginContainer" parent="VBoxContainer/HeaderPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="HeaderLabel" type="Label" parent="VBoxContainer/HeaderPanel/HeaderMargin"]
layout_mode = 2
text = "ðŸ“Š Historial de Capturas Recientes"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CatchList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="EmptyStatePanel" type="PanelContainer" parent="VBoxContainer/ScrollContainer/CatchList"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_card_theme")

[node name="EmptyStateMargin" type="MarginContainer" parent="VBoxContainer/ScrollContainer/CatchList/EmptyStatePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="EmptyStateLabel" type="Label" parent="VBoxContainer/ScrollContainer/CatchList/EmptyStatePanel/EmptyStateMargin"]
layout_mode = 2
text = "ðŸŽ£ AÃºn no has capturado ningÃºn pez
Â¡Sal a pescar y construye tu historial!"
horizontal_alignment = 1
autowrap_mode = 2
